# go-gazelle-grpcgcp

./: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  grpcgcp.patch  main.go
