module(name = "go-gen-validate")

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

go_deps.archive_override(
    urls = [
        "https://github.com/GoogleCloudPlatform/grpc-gcp-go/archive/refs/tags/grpcgcp/v1.5.0.tar.gz",
    ],
    patch_strip = 2,
    patches = [
        "//:grpcgcp.patch",
    ],
    strip_prefix = "grpc-gcp-go-grpcgcp-v1.5.0/grpcgcp",
    path = "github.com/GoogleCloudPlatform/grpc-gcp-go/grpcgcp",
    sha256 = "34c38297dd2f9016c849068e7e097fd6d87d0050e7b3a6533eb808b685755c9a",
)

use_repo(
    go_deps,
    "com_github_googlecloudplatform_grpc_gcp_go_grpcgcp",
)
