module(name = "go-gen-validate")

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

go_deps.gazelle_override(
    directives = [
        "gazelle:resolve go github.com/GoogleCloudPlatform/grpc-gcp-go/grpcgcp/grpc_gcp @com_github_googlecloudplatform_grpc_gcp_go_grpcgcp//grpc_gcp",
    ],
    path = "github.com/GoogleCloudPlatform/grpc-gcp-go/grpcgcp",
)

use_repo(
    go_deps,
    "com_github_googlecloudplatform_grpc_gcp_go_grpcgcp",
)
